// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PTalkSelector should render when props undefined 1`] = `
<DocumentFragment>
  <div
    class="styled__Container-sc-1piihja-0"
  >
    <div
      class="styled__Title-sc-1piihja-1 hrbxKr"
    >
      このトラックのセッション
    </div>
    <ul
      class="MuiList-root styled__List-sc-1piihja-2 TaJvQ MuiList-padding"
      height="497"
    />
    <div
      class="styled__Footer-sc-1piihja-6 cnpEUB"
    >
      <span
        aria-disabled="false"
        class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-5 MuiCheckbox-root MuiCheckbox-colorSecondary MuiIconButton-colorSecondary"
      >
        <span
          class="MuiIconButton-label"
        >
          <input
            class="PrivateSwitchBase-input-8"
            data-indeterminate="false"
            type="checkbox"
            value=""
          />
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </span>
      <div
        class="styled__label-sc-1piihja-7"
      >
        ライブ中のセッションに自動遷移する
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PTalkSelector should render without crash 1`] = `
<DocumentFragment>
  <div
    class="styled__Container-sc-1piihja-0"
  >
    <div
      class="styled__Title-sc-1piihja-1 hrbxKr"
    >
      このトラックのセッション
    </div>
    <ul
      class="MuiList-root styled__List-sc-1piihja-2 TaJvQ MuiList-padding"
      height="497"
    >
      <div
        aria-disabled="false"
        class="MuiButtonBase-root MuiListItem-root styled__Item-sc-1piihja-3 iyjOuh MuiListItem-gutters MuiListItem-button Mui-selected"
        role="button"
        tabindex="0"
      >
        <div
          class="styled__Text-sc-1piihja-4 dleXVB"
        >
          <span
            class="styled__Live-sc-1piihja-5 gBQmsg"
          >
            LIVE
          </span>
           10:00-10:20
          <br />
          Securityに関する発表
        </div>
        <span
          class="MuiTouchRipple-root"
        />
      </div>
      <div
        aria-disabled="false"
        class="MuiButtonBase-root MuiListItem-root styled__Item-sc-1piihja-3 ifFYpr MuiListItem-gutters MuiListItem-button"
        role="button"
        tabindex="0"
      >
        <div
          class="styled__Text-sc-1piihja-4 dleXVB"
        >
           10:25-10:45
          <br />
          IoT/Edgeに関する10の知見
        </div>
        <span
          class="MuiTouchRipple-root"
        />
      </div>
      <div
        aria-disabled="true"
        class="MuiButtonBase-root MuiListItem-root styled__Item-sc-1piihja-3 ifFYpr MuiListItem-gutters Mui-disabled MuiListItem-button Mui-disabled"
        role="button"
        tabindex="-1"
      >
        <div
          class="styled__Text-sc-1piihja-4 dleXVB"
        >
           10:50-11:10
          <br />
          CloudNative Networking
        </div>
      </div>
    </ul>
    <div
      class="styled__Footer-sc-1piihja-6 cnpEUB"
    >
      <span
        aria-disabled="false"
        class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-1 MuiCheckbox-root MuiCheckbox-colorSecondary PrivateSwitchBase-checked-2 Mui-checked MuiIconButton-colorSecondary"
      >
        <span
          class="MuiIconButton-label"
        >
          <input
            checked=""
            class="PrivateSwitchBase-input-4"
            data-indeterminate="false"
            type="checkbox"
            value=""
          />
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </span>
      <div
        class="styled__label-sc-1piihja-7"
      >
        ライブ中のセッションに自動遷移する
      </div>
    </div>
  </div>
</DocumentFragment>
`;
